# lab7

./: CMakeLists.txt  main.cpp
Frames/AbstractFrame/: Frame.cpp  Frame.h
Frames/COMM/: COMM.cpp  COMM.h
Frames/COMR/: COMR.cpp  COMR.h
Frames/ENCR/: ENCR.cpp  ENCR.h
Frames/EQU2/: EQU2.cpp  EQU2.h
Frames/ETCO/: ETCO.cpp  ETCO.h
Frames/GRID/: GRID.cpp  GRID.h
Frames/LINK/: LINK.cpp  LINK.h
Frames/OWNE/: OWNE.cpp  OWNE.h
Frames/PCNT/: PCNT.cpp  PCNT.h
Frames/POPM/: POPM.cpp  POPM.h
Frames/POSS/: POSS.cpp  POSS.h
Frames/PRIV/: PRIV.cpp  PRIV.h
Frames/RBUF/: RBUF.cpp  RBUF.h
Frames/SEEK/: SEEK.cpp  SEEK.h
Frames/TextFrame/: TXXX.cpp  TXXX.h  TextFrame.cpp  TextFrame.h
Frames/UFID/: UFID.cpp  UFID.h
Frames/URLFrame/: URLFrame.cpp  URLFrame.h  WXXX.cpp  WXXX.h
Frames/USER/: USER.cpp  USER.h
Frames/USLT/: USLT.cpp  USLT.h
Tags/: Tag.cpp  Tag.h  TagHeader.cpp  TagHeader.h
